--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link  href="css/form.css" rel="stylesheet" >
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Sign in</title>
+    <title>Register</title>
     <style>
         body {
             background-color: #F3EBF6;
