--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -4,12 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Books</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
     <style>
         .book{
-            float: left;
-            background-color: #333;
+            padding-bottom: 30px;
         }
-
+        .book-link{
+            position: relative;
+            left:85%;
+            top:100px;
+            text-align: center !important;
+        }
+        .book-image{
+            position: relative;
+            left:50%;
+            top: -15px;
+        }
     </style>
 </head>
 <body>
@@ -19,13 +37,22 @@
     <div th:unless="${username}">
         <div th:insert="navbar"></div>
     </div>
-    <h1>Here are all of the books</h1>
-    <div th:each="Book : ${Books}" class="book">
-        <a th:text="${Book.getTitle()}" th:href="${Book.getLink()}"></a>
-        <a th:href="${Book.getLink()}">
-        <img th:src="${Book.getCover()} + ${fullString}">
-        </a>
+    <div th:if = "${Search_query}">
+        <h1 th:text="|Here are all of the books for ${Search_query}|"></h1>
+    </div>
+    <div th:unless="${Search_query}">
+        <h1>Here are all of the books</h1>
     </div>
 
+    <div class="main">
+    <div class="row" th:each="bookSet : ${Books}">
+        <div th:each="Book : ${bookSet}" class="col-lg-3 book">
+            <a th:text="${Book.getTitle()}" th:href="${Book.getLink()}" class="book-link"></a>
+            <a th:href="${Book.getLink()}">
+                <img th:src="${Book.getCover()} + ${fullString}" height="200" width="130" class="book-image">
+            </a>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
