--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -117,8 +117,8 @@
 <div class="main">
     <p class="sign" align="center">Sign in</p>
     <form class="form1" th:action="@{/login}" method="post">
-        <input class="un" name="username" type="text" align="center" placeholder="Username">
-        <input class="pass" name="password" type="password" align="center" placeholder="Password">
+        <input class="un" name="username" type="text" align="center" placeholder="Username" required>
+        <input class="pass" name="password" type="password" align="center" placeholder="Password" required>
         <input  type="submit" class="submit" align="center"></input>
         <p class="register" align="center"><a href="register">Register.</a></p>
     </form>
