--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -118,9 +118,9 @@
 <div class="main">
     <p class="sign" align="center">Sign in</p>
     <form class="form1" th:action="@{/register}" method="post">
-        <input class="un" name="email" type="text" align="center" placeholder="jonh.doe@example.com">
-        <input class="un" name="username" type="text" align="center" placeholder="Username">
-        <input class="pass" name="password" type="password" align="center" placeholder="Password">
+        <input class="un" name="email" type="text" align="center" placeholder="jonh.doe@example.com" required>
+        <input class="un" name="username" type="text" align="center" placeholder="Username" required>
+        <input class="pass" name="password" type="password" align="center" placeholder="Password" required>
 
         <div th:if = "${error}">
             <span th:text = "${error}"></span>
