--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -116,14 +116,14 @@
 
 <body>
 <div class="main">
-    <p class="sign" align="center">Sign in</p>
+    <p class="sign" align="center">Register</p>
     <form class="form1" th:action="@{/register}" method="post">
         <input class="un" name="email" type="text" align="center" placeholder="jonh.doe@example.com" required>
         <input class="un" name="username" type="text" align="center" placeholder="Username" required>
         <input class="pass" name="password" type="password" align="center" placeholder="Password" required>
 
         <div th:if = "${error}">
-            <span th:text = "${error}"></span>
+            <span style="white-space: pre-wrap; color:red;" th:text = "${error}"></span>
        </div>
 
         <div th:if = "${success}">
