Allows the user to add their own book to the wishlist instead of just the first book.

--- a/src/main/resources/templates/wishlist_post.html
+++ b/src/main/resources/templates/wishlist_post.html
@@ -55,13 +55,28 @@
     </form>
 </div>
 <div class="main">
-    <h1>Here are all of the books you can check out now!</h1>
+    <h1>Here are all of the books that match your query</h1>
     <div class="row" th:each="bookSet : ${book}">
         <div th:each="Book : ${bookSet}" class="col-lg-3 book" >
             <a th:text="${Book.getTitle()}" th:href="${Book.getLink()}" class="book-link"></a>
             <a th:href="${Book.getLink()}">
                 <img th:src="${Book.getCover()} + ${fullString}" height="200" width="130" class="book-image">
             </a>
+            <form action="/addbook" method="post">
+                    <input type="hidden" name="title" th:value="${Book.getTitle()}">
+                    <input type="hidden" name="isbn" th:value="${Book.getIsbn()}">
+                    <input type="hidden" name="cover" th:value="${Book.getCover()}">
+                    <input type="hidden" name="description" th:value="${Book.getDescription()}">
+<!--                   -->
+                    <input type="hidden" name="rating" th:value="${Book.getRating()}">
+                    <input type="hidden" name="link" th:value="${Book.getLink()}">
+                    <input type="hidden" name="page_num" th:value="${Book.getPage_num()}">
+<!--                    <input type="hidden" name="date" th:value="${Book.getPublished_date()}">-->
+                    <input type="hidden" name="publisher" th:value="${Book.getPublisher()}">
+                    <input type="hidden" name="collection" th:value="${Book.getCollection()}">
+                    <input type="hidden" name="num_ratings" th:value="${Book.getNum_ratings()}">
+                <input type="submit" th:value="|Add ${Book.getTitle()} |">
+            </form>
         </div>
     </div>
     <h1 class="unavailable-books">These books are not available at any library.</h1>
