Added all books to index. Also allowed the user to update their password and email.

--- a/src/main/resources/templates/navbar_logged_in.html
+++ b/src/main/resources/templates/navbar_logged_in.html
@@ -64,6 +64,7 @@
 <ul>
     <div class="nav-wrapper">
         <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i></a> </li>
             <li><a href="logout">Logout</a></li>
             <li><a href="wishlist">Wishlist</a></li>
             <li><a href="current">Current books</a></li>
