--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Books</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <style>
+        .book{
+            top:100px;
+            padding-bottom: 30px;
+        }
+        .book-link{
+            position: relative;
+            left:85%;
+            top:100px;
+            text-align: center !important;
+        }
+        .book-image{
+            position: relative;
+            left:50%;
+            top: -15px;
+        }
+
+    </style>
 </head>
 <body>
 <div th:if = "${username}">
@@ -14,5 +40,16 @@
     <div th:insert="navbar"></div>
 </div>
 
+
+<div class="main">
+    <div class="row" th:each="bookSet : ${Books}">
+        <div th:each="Book : ${bookSet}" class="col-lg-3 book">
+            <a th:text="${Book.getTitle()}" th:href="${Book.getLink()}" class="book-link"></a>
+            <a th:href="${Book.getLink()}">
+                <img th:src="${Book.getCover()} + ${fullString}" height="200" width="130" class="book-image">
+            </a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
