--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -54,6 +54,12 @@
             </a>
         </div>
     </div>
+        <div class="form">
+            <form class="wishlist-submit" action="/addbooksforuser" method="post">
+                <input type="text" name="title">
+                <input type="submit" class="search-submit"/>
+            </form>
+        </div>
     </div>
 </body>
 </html>
